--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,12 @@ dependencies {
 
     //ExpandableTextView
     implementation 'com.ms-square:expandableTextView:0.1.4'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+
+    //Login interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
 }
